# WebRemoteControlPVZ

./: Cargo.toml  README.md  config.toml
src/: main.rs  test2.rs
src/control/: control.rs
src/linklist/: list1.rs  mod.rs
src/record.rs/: mod.rs
src/signal/: Cargo.toml
src/webrtc/: connect.rs
web/: appcontroller.js  index.html  rtcp.js
